@@ -142,14 +142,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) mpm event: Correctly count active child processes in parent process if
-     child process dies due to MaxConnectionsPerChild. PR 65592.
-     Trunk version of patch:
-        https://svn.apache.org/r1893520
-     Backport version for 2.4.x of patch:
-      Trunk version of patch works
-      svn merge -c 1893520 ^/httpd/httpd/trunk .
-     +1: rpluem, ylavic, minfrin
 
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
